--- a/.env.dist
+++ b/.env.dist
@@ -1,3 +1,12 @@
-NODE_ENV=production # Possible Options: 'development' or 'production' | Default: 'production'
-PORT=3000 # Any Open Port Number | Default: 3000
-DATABASE_URL=mongodb://127.0.0.1:27017/spotifyDB # Works with local or live MongoDB connection URLs. 'spotifyDB' is the database name. | Default: 'mongodb://127.0.0.1:27017/spotifyDB'
+# Environment - Possible Options: 'development' or 'production' | Example: development
+ENVIRONMENT=
+
+# Port - Any Open Port Number | Example: 3000
+PORT=
+
+# MongoDB Database URL - Works with local or live MongoDB connection URLs. 'spotifyDB' is the database name. | Example: mongodb://127.0.0.1:27017/spotifyDB
+DATABASE_URL=
+
+# Spotify Client ID & Secret - Copy & paste the Client ID from your App settings at https://developers.spotify.com/dashboard
+SPOTIFY_CLIENT_ID=
+SPOTIFY_CLIENT_SECRET=
