--- a/package.json
+++ b/package.json
@@ -3,16 +3,16 @@
     "version": "1.0.0",
     "description": "This project uses the [Spotify Web API](https://developer.spotify.com/documentation/web/api) to allow users to search for music within Spotify's music library. The project contains a React frontend that provides users with the ability to sign in to the application using OAuth2.0 via their Spotify account. Upon signing in, users will then be able to search for music by Artist, Album, Track Name, etc. All search and OAuth2.0 requests are handled by an Express backend API which acts as a middleman between the application frontend and Spotify's web APIs.",
     "engines": {
-        "node": "18.18.0",
-        "npm": "10.2.1"
+        "node": "20.9.0",
+        "npm": "10.1.0"
     },
     "main": "index.js",
     "scripts": {
         "start": "npm run start:react && npm run start:api",
-        "start:api": "cd api && node server.js",
+        "start:api": "cd api && node --env-file=../.env server.js",
         "start:react": "cd reactjs && npx vite build",
         "dev": "concurrently \"npm run dev:api\" \"npm run dev:react\"",
-        "dev:api": "cd api && nodemon server.js",
+        "dev:api": "cd api && nodemon --env-file=../.env server.js",
         "dev:react": "cd reactjs && npx vite",
         "lint:react": "cd reactjs && eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0"
     },
@@ -20,23 +20,23 @@
     "license": "ISC",
     "dependencies": {
         "cors": "^2.8.5",
-        "dotenv": "^16.3.1",
         "express": "^4.18.2",
         "mongoose": "^7.6.3",
+        "morgan": "^1.10.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0"
+
     },
     "devDependencies": {
-        "@types/react": "^18.2.15",
-        "@types/react-dom": "^18.2.7",
-        "@vitejs/plugin-react-swc": "^3.3.2",
+        "@types/react": "^18.2.33",
+        "@types/react-dom": "^18.2.14",
+        "@vitejs/plugin-react-swc": "^3.4.1",
         "concurrently": "^8.2.2",
-        "eslint": "^8.45.0",
-        "eslint-plugin-react": "^7.32.2",
+        "eslint": "^8.52.0",
+        "eslint-plugin-react": "^7.33.2",
         "eslint-plugin-react-hooks": "^4.6.0",
-        "eslint-plugin-react-refresh": "^0.4.3",
-        "morgan": "^1.10.0",
+        "eslint-plugin-react-refresh": "^0.4.4",
         "nodemon": "^3.0.1",
-        "vite": "^4.4.5"
+        "vite": "^4.5.0"
     }
 }
