Implemented OAuth Flow & Refresh Tokens Changes made in this commit: - In .env.dist, removed the ENVIRONMENT environment variable because it is no longer needed. Added the API_BASE_URL environment variable with an explanatory comment. - In api/controllers/spotifyController.js, implemented the login, callback & search endpoints in the Express API. The backend can now fully authenticate users using OAuth 2.0, validate & refresh JSON web tokens when needed & make search requests to the Spotify search API endpoint. - In api/middlewares/index.js, migrated middlewares from the server.js into their own middlewares index.js to improve readability of server.js. - In api/middlewares/validateToken.js, created a middleware to check for & validate existing tokens in the MongoDB database. The middleware also refreshes & updates expired tokens using the associated refresh_token. - In api/models/userToken.js, created a Mongoose model to store all JSON web token data returned from the Spotify token API endpoint after providing an authorization_code. - In api/routes/spotifyRouter.js, changed the status route to callback. Inserted the userToken middleware into the search endpoint route middleware chain. - In api/utils/validateEnv.js, added an if check to ensure the API_BASE_URL environment variable is present on backend server startup.

--- a/.env.dist
+++ b/.env.dist
@@ -1,8 +1,8 @@
-# Environment - Possible Options: 'development' or 'production' | Example: development
-ENVIRONMENT=
-
 # Port - Any Open Port Number | Example: 3000
 PORT=
+
+# API Base URL - The local or live URL of the application. | Example: http://localhost:3000/
+API_BASE_URL=
 
 # MongoDB Database URL - Works with local or live MongoDB connection URLs. 'spotifyDB' is the database name. | Example: mongodb://127.0.0.1:27017/spotifyDB
 DATABASE_URL=
