Accessibility & Responsive Design Improvements Changes made in this commit: - In package.json, added --host flag to the dev:react script to make the dev server accessible on the local network for testing. - In api/controllers/spotifyController.js, re-ordered the environment variable imports & changed the REDIRECT_URI to be dynamic based on API_BASE_URL. - In reactjs/index.html, changed the default page title & added a meta description. - In reactjs/public/robots.txt, added a rule to prevent crawling of all pages of the application. - In index.css, added Plus Jakarta Sans Google Font & set the body background color to black. - In reactjs/src/components/AlbumCard.jsx, added an aria-label to the link tag for improved accessibility. - In reactjs/src/components/ArtistCard.jsx, added an aria-label to the link tag for improved accessibility. - In reactjs/src/components/TrackCard.jsx, added an aria-label to the link tag for improved accessibility. - In reactjs/src/components/Header.jsx, replaced the Link with LinkStyled to fix an issue where the link size was larger than the logo image using display:contents. - In reactjs/src/components/buttons/LoginButton.jsx, set the font-family to Plus Jakarta Sans & changed the text color to black for better contrast & accessibility. - In reactjs/src/components/buttons/LogoutButton.jsx, set the font-family to Plus Jakarta Sans & changed the text color to black for better contrast & accessibility. - In reactjs/src/pages/Home.jsx, fixed a bug where the page offset would be preserved when a new search was performed. Moved the select input after the text input in the search form. Added aria-labels to a few elements to improve accessibility. Added a background image to the page & improved the responsive design.

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
         "start:react": "cd reactjs && npx vite build",
         "dev": "concurrently \"npm run dev:api\" \"npm run dev:react\"",
         "dev:api": "cd api && nodemon --env-file=../.env server.js",
-        "dev:react": "cd reactjs && npx vite",
+        "dev:react": "cd reactjs && npx vite --host",
         "lint:react": "cd reactjs && eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0"
     },
     "author": "Erik Brandon",
