Added ESLint & Prettier Formatting to Project - In `api/.prettierrc`, added a prettierrc file to the backend that uses   the prettier-plugin-organize-imports plugin and a few rules to format   files. - In `api/eslint.config.mjs`, created an ESLint config with ESLint   recommended JavaScript, eslint-config-prettier rules, and the prettier   plugin. - In `reactjs/.eslintrc.cjs`, deleted the old ESLint config from the   react frontend. - In `reactjs/.prettierrc`, added a prettierrc file to the frontend that   uses the prettier-plugin-organize-imports plugin and a few rules to   format files. - In `reactjs/eslint.config.cjs`, migrated and updated the old ESLint   config to use the eslint-config-prettier rules, and the prettier   plugin. - All other files in this commit were reformatted and linted using the   new configuration.
Signed-off-by: Erik Brandon <erikbrandon1@gmail.com>

--- a/api/package.json
+++ b/api/package.json
@@ -10,7 +10,8 @@
     "scripts": {
         "start": "node --env-file=.env server.js",
         "dev": "nodemon --env-file=.env server.js",
-        "lint": "npx eslint"
+        "lint": "eslint",
+        "lint:fix": "eslint --fix"
     },
     "author": "Erik Brandon",
     "license": "ISC",
