Fixed Client ID Redirect URI Issue - In `README.md`, `api/.env.example`, `api/routes/spotifyRouter.rest`, `reactjs/.env.example`, and `reactjs/vite.config.js`, replaced all localhost URLs with 127.0.0.1 due to new Spotify Redirect URI requirements.
Signed-off-by: Erik Brandon <erikbrandon1@gmail.com>

--- a/api/.env.example
+++ b/api/.env.example
@@ -2,7 +2,7 @@
 PORT=3000
 
 # API Base URL - The local or live URL of the application. | Example: http://localhost:3000/
-API_BASE_URL=http://localhost:3000
+API_BASE_URL=http://127.0.0.1:3000
 
 # MongoDB Database URL - Works with local or live MongoDB connection URLs. 'spotifyDB' is the database name. | Example: mongodb://127.0.0.1:27017/spotifyDB
 DATABASE_URL=mongodb://mongodb:27017/spotifyDB
